--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ Snell, Dallin
 <html lang = "en">
 <html>
   <head>
-    <title>Snell</title>
+    <title>Dallin</title>
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>my personal page</h1>
+    <h1>My personal page</h1>
+    <h3>By Dallin Snell</h3>
   </body>
 </html>
