--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Snell, Dallin
 <html>
   <head>
     <title>Dallin</title>
+    <link rel="icon" href="./images/kali-icon.icon" />
     <meta charset="utf-8" />
   </head>
   <body>
