--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Snell, Dallin
 <html>
   <head>
     <title>Dallin</title>
-    <link rel="icon" href="./images/kali_icon.ico">
+    <link rel="icon" href="/images/kali_icon.ico">
     <meta charset="utf-8" />
   </head>
   <body>
