minor updates to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 Snell, Dallin
-
-
+09 NOV 2017
+my personal webpage
 -->
 
 <!DOCTYPE html>
@@ -9,8 +9,8 @@ Snell, Dallin
 <html>
   <head>
     <title>Dallin</title>
-    <link rel="icon" href="/images/kali_icon.ico">
-    <meta charset="utf-8" />
+    <link rel="icon" href="/images/kali_icon.ico"/>
+    <meta charset="utf-8"/>
   </head>
   <body>
     <h1>My personal page</h1>
