--- a/about.html
+++ b/about.html
@@ -1,20 +1,19 @@
 <!--
 Snell, Dallin
 09 NOV 2017
-my personal webpage
+about me
 -->
 
 <!DOCTYPE html>
 <html lang = "en">
 <html>
   <head>
-    <title>Dallin</title>
+    <title>About</title>
     <link rel="icon" href="/images/kali_icon.ico"/>
     <meta charset="utf-8"/>
   </head>
   <body>
-    <h1>My personal page</h1>
-    <h3>By <a href="./about.html">Dallin Snell</a></h3>
-
+    <h1>Dallin Snell</h1>
+    <h3></h3>
   </body>
 </html>
