--- a/about.html
+++ b/about.html
@@ -14,6 +14,6 @@ about me
   </head>
   <body>
     <h1>Dallin Snell</h1>
-    <h3></h3>
+    <p>My name is Dallin Snell. My dad is deployed in Afghanistan with the Air Force.</p>
   </body>
 </html>
