--- a/about.html
+++ b/about.html
@@ -14,6 +14,6 @@ about me
   </head>
   <body>
     <h1>Dallin Snell</h1>
-    <p>My name is Dallin Snell. My dad is deployed in Afghanistan with the Air Force. Pray for him.</p>
+    <p>My name is Dallin Snell. My dad is deployed in Afghanistan with the Air Force.</p>
   </body>
 </html>
