--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ my personal webpage
   </head>
   <body>
     <h1>My personal page</h1>
-    <h3>By <a href="./about.html">Dallin Snell</a></h3>
-
+    <label><strong>Username</strong></label>
+    <input type="text" placeholder="Username" name="username" required>
+    <input type="password" placeholder="Password" name="pass" required>
+    <button type="submit">Login</button>
   </body>
 </html>
-  
+
