--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@ my personal webpage
   <body>
     <h1>My personal page</h1>
     <label><strong>Username</strong></label>
+    <br/>
     <input type="text" placeholder="Username" name="username" required>
+    <br/>
+    <label><strong>Password</strong></label>
+    <br/>
     <input type="password" placeholder="Password" name="pass" required>
+    <br/>
     <button type="submit">Login</button>
   </body>
 </html>
