--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -16,7 +16,7 @@ my personal file download webpage
     <meta charset="utf-8"/>
   </head>
   <body>
-    <p>This page has links to various downloadable files. Page first became active on: 10 NOV 2017.</p>
+    <p>This page has links to various downloadable files and sites. Page first became active on: 10 NOV 2017.</p>
     <p>In order to regenerate this page's name (frequency to be determined) go <a href="https://www.random.org/strings/">here</a> and use the CAPITAL letters option and numeric option. Length is ten.</p>
     <h1>LINKS</h1>
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/">ambient-mixer</a></p>
