--- a/history.html
+++ b/history.html
@@ -9,6 +9,16 @@ Snell, Dallin
 <html>
   <head>
     <style>
+      table, td {
+        border-collapse: collapse;
+        border: 1px solid black;
+      }
+
+      th {
+        text-align: left;
+        border-bottom: 3px solid black;
+        border-right: 1px solid black;
+      }
     </style>
     <title>Past Strings</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
