--- a/index.html
+++ b/index.html
@@ -9,16 +9,6 @@ my personal webpage
 <html>
   <head>
     <style>
-      table, td {
-        border-collapse: collapse;
-        border: 1px solid black;
-      }
-
-      th {
-        text-align: left;
-        border-bottom: 3px solid black;
-        border-right: 1px solid black;
-      }
     </style>
     <title>Base</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
@@ -26,22 +16,8 @@ my personal webpage
     <meta charset="utf-8"/>
   </head>
   <body>
-    <p>This page is used as a history. Page first became active on: 09 NOV 2017.</p>
-    <p>The table below is used to document the history mentioned above. The left column is used to document a string. The right column is the date that string was generated. The date is entered first (when the string is generated), but the string remains unknown until a new one is generated.</p>
-    <table>
-      <tr>
-        <th>String</th>
-        <th>Date</th>
-      </tr>
-      <tr>
-        <td></td>
-        <td>10 NOV 2017</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <p>Page first became active on: 09 NOV 2017.</p>
+
     <button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
 </html>
