--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ my personal webpage
   </head>
   <body>
     <p>Page first became active on: 09 NOV 2017.</p>
+    <br/>
+    <a href="./history.html">History</a>
 
     <button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
