--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@ my personal webpage
     </style>
     <title>Base</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
+    <link rel="stylesheet" type="text/css" href="themes.css">
+    <script src="scripts.js"/>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
-  <body>
+  <body onload="here()">
+    <h1>Header here</h1>
     <p>Page first became active on: 09 NOV 2017.</p>
     <br/>
     <a href="./history.html">History</a>
