--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ my personal webpage
     <title>Base</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="themes.css">
-    <script src="scripts.js"/>
+    <script src="scripts.js"></script>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
