added files, updated secret

--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -20,6 +20,7 @@ my personal file download webpage
     <p>In order to regenerate this page's name (frequency to be determined) go <a href="https://www.random.org/strings/">here</a> and use the CAPITAL letters option and numeric option. Length is ten.</p>
     <h1>LINKS</h1>
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/">ambient-mixer</a></p>
+    <p>Hasher and un-hasher: <a href="http://ncode.me/">ncodeme</a></p>
     <h1>DOWNLOADS</h1>
     <button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
