--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -22,7 +22,7 @@ my personal file download webpage
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/">ambient-mixer</a></p>
     <p>Hasher and un-hasher: <a href="http://ncode.me/">ncodeme</a></p>
     <h1>DOWNLOADS</h1>
-    <link href="./files/repository.cmd" download />
+    <a href="./files/repository.cmd" download>Repository</a>
     <button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
 </html>
