--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -17,7 +17,7 @@ my personal file download webpage
   </head>
   <body>
     <p>This page has links to various downloadable files and sites. Page first became active on: 10 NOV 2017.</p>
-    <p>In order to regenerate this page's name (frequency to be determined) go <a href="https://www.random.org/strings/">here</a> and use the CAPITAL letters option and numeric option. Length is ten.</p>
+    <p>In order to regenerate this page's name (frequency to be determined) go <a href="https://www.random.org/strings/" target="_blank">here</a> and use the CAPITAL letters option and numeric option. Length is ten.</p>
     <h1>LINKS</h1>
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/" target="_blank">ambient-mixer</a></p>
     <p>Hasher and un-hasher: <a href="http://ncode.me/" target="_blank">ncodeme</a></p>
