--- a/history.html
+++ b/history.html
@@ -9,19 +9,10 @@ Snell, Dallin
 <html>
   <head>
     <style>
-      table, td {
-        border-collapse: collapse;
-        border: 1px solid black;
-      }
-
-      th {
-        text-align: left;
-        border-bottom: 3px solid black;
-        border-right: 1px solid black;
-      }
     </style>
     <title>Past Strings</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
+    <link rel="stylesheet" type="text/css" href="themes.css">
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
