--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@ Snell, Dallin
     </style>
     <title>Past Strings</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="themes.css">
+    <link rel="stylesheet" type="text/css" href="./themes.css">
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
