--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ my personal webpage
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
-  <body onload="here()">
+  <body>
     <h1>Header here</h1>
     <p>Page first became active on: 09 NOV 2017.</p>
     <br/>
