--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ my personal webpage
     <meta charset="utf-8"/>
   </head>
   <body>
-    <h1>Header here</h1>
+    <h1>About Me</h1>
     <p>Page first became active on: 09 NOV 2017.</p>
     <br/>
     <a href="./history.html">History</a>
