Updated various files

--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -21,6 +21,7 @@ my personal file download webpage
     <h1>LINKS</h1>
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/" target="_blank">ambient-mixer</a></p>
     <p>Hasher and un-hasher: <a href="http://ncode.me/" target="_blank">ncodeme</a></p>
+    <p>Stronger hashing: <a href="http://md5decrypt.net/en/" target="_blank">md5decrypt</a></p>
     <h1>DOWNLOADS</h1>
     <a href="./files/repository.exe" download>Repository</a>
 
