--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@ my personal webpage
   <head>
     <style>
     </style>
-    <title>Base</title>
+    <title>root</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
     <script src="scripts.js"></script>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
-  <body>
-    <h1>About Me</h1>
+  <body style="background-color:powderblue;">
+    <h1>root</h1>
     <p>Page first became active on: 09 NOV 2017.</p>
+    <p>If you've made it to this page on accident, it's kind of bland and boring here... Maybe you meant to go to the <a href="./about.html">About Me</a> page?</p>
+    <br/><br/><br/>
+    <h3>List of linkable pages</h3>
+      <ul>
+        <li><a href="./history.html">string history</a></li>
+        <li><a href="./about.html">About Me</a></li>
+      </ul>
     <br/>
-    <a href="./history.html">History</a>
-    <br/>
-
     <button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
 </html>
