--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ my personal webpage
   <body style="background-color:powderblue;">
     <h1>root</h1>
     <p>Page first became active on: 09 NOV 2017.</p>
-    <p>If you've made it to this page on accident, it's kind of bland and boring here... Maybe you meant to go to the <a href="./about.html">About Me</a> page?</p>
+    <p>Maybe you made it to this page on accident? It's kind of bland and boring here... Maybe you meant to go to the <a href="./about.html">About Me</a> page?</p>
     <br/><br/><br/>
     <h3>List of linkable pages</h3>
       <ul>
