--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
   </head>
-  <body style="background-color: powderblue;">
+  <body>
     <h1>About Me</h1>
     <hr/>
     <image src="./images/brothers.jpg" alt="Snell Brothers" style="float: right;"/>
