--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -25,6 +25,6 @@ my personal file download webpage
     <h1>DOWNLOADS</h1>
     <a href="./files/repository.exe" download>Repository</a>
 
-    <br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
+    <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
 </html>
