--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -20,10 +20,14 @@ my personal file download webpage
     <p>In order to regenerate this page's name (frequency to be determined) go <a href="https://www.random.org/strings/" target="_blank">here</a> and use the CAPITAL letters option and numeric option. Length is ten.</p>
     <h1>LINKS</h1>
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/" target="_blank">ambient-mixer</a></p>
-    <p>Hasher and un-hasher: <a href="http://ncode.me/" target="_blank">ncodeme</a></p>
+    <p>Hasher and un-hasher (AES): <a href="http://ncode.me/" target="_blank">ncodeme</a></p>
     <p>Stronger hashing: <a href="http://md5decrypt.net/en/" target="_blank">md5decrypt</a></p>
     <h1>DOWNLOADS</h1>
     <a href="./files/repository.exe" download>Repository</a>
+    <a href="./files/7za.exe" download>7Zip</a>
+    <a href="./files/nircmd.exe" download>nircmd</a>
+    <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a>
+    <a href="./files/7za_help.txt download>7Zip help file</a>
 
     <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
