--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -23,11 +23,11 @@ my personal file download webpage
     <p>Hasher and un-hasher (AES): <a href="http://ncode.me/" target="_blank">ncodeme</a></p>
     <p>Stronger hashing: <a href="http://md5decrypt.net/en/" target="_blank">md5decrypt</a></p>
     <h1>DOWNLOADS</h1>
-    <a href="./files/repository.exe" download>Repository</a>
-    <a href="./files/7za.exe" download>7Zip</a>
-    <a href="./files/nircmd.exe" download>nircmd</a>
-    <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a>
-    <a href="./files/7za_help.txt download>7Zip help file</a>
+    <a href="./files/repository.exe" download>Repository</a><br/>
+    <a href="./files/7za.exe" download>7Zip</a><br/>
+    <a href="./files/nircmd.exe" download>nircmd</a><br/>
+    <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a><br/>
+    <a href="./files/7za_help.txt download>7Zip help file</a><br/>
 
     <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
