--- a/0WA98Y5L18.html
+++ b/0WA98Y5L18.html
@@ -27,7 +27,7 @@ my personal file download webpage
     <a href="./files/7za.exe" download>7Zip</a><br/>
     <a href="./files/nircmd.exe" download>nircmd</a><br/>
     <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a><br/>
-    <a href="./files/7za_help.txt download>7Zip help file</a><br/>
+    <a href="./files/7za_help.txt" download>7Zip help file</a><br/>
 
     <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
