--- a/history.html
+++ b/history.html
@@ -33,12 +33,12 @@ Snell, Dallin
           <th>Date</th>
         </tr>
         <tr>
-          <td></td>
+          <td>0WA98Y5L18</td>
           <td>10 NOV 2017</td>
         </tr>
         <tr>
           <td></td>
-          <td></td>
+          <td>17 NOV 2017</td>
         </tr>
       </table>
     </div>
