--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <h2>Interests</h2>
     <h4>TV</h4>
-    <p id="limit">I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm still catching up, but I'm almost there! (So no spoilers!) I also watch Ballers (again, I'm almost caught up!). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar).</p>
+    <p id="limit">I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (I'm almost caught up, so no spoilers!). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
     <p id="limit">I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch.</p>
     <h4>Exercising</h4>
     <p id="limit">I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
