--- a/about.html
+++ b/about.html
@@ -30,5 +30,10 @@
     <p id="limit">I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
     <h4>Computers</h4>
     <p id="limit">Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
+    <h4>Promotions</h4>
+    <p id="limit">I don't normally promote too much on my own pages because I like to limit the ads/advertisements/etc. people see when they visit. These are some people who have really impacted me in my life, though, and I thought I'd share with all of you.</p>
+    <p></p>
+    <p></p>
+    <p></p>
   </body>
 </html>
