--- a/about.html
+++ b/about.html
@@ -32,8 +32,10 @@
     <p id="limit">Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
     <h4>Promotions</h4>
     <p id="limit">I don't normally promote too much on my own pages because I like to limit the ads/advertisements/etc. people see when they visit. These are some people who have really impacted me in my life, though, and I thought I'd share with all of you.</p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p>Order of Man</p>
+    <p>Lecrae</p>
+    <p>Tedashii</p>
+    <p>KB</p>
+    <p>And a link to my personal YouTube page</p>
   </body>
 </html>
