--- a/about.html
+++ b/about.html
@@ -33,9 +33,13 @@
     <h4>Promotions</h4>
     <p id="limit">I don't normally promote too much on my own pages because I like to limit the ads/advertisements/etc. people see when they visit. These are some people who have really impacted me in my life, though, and I thought I'd share with all of you.</p>
     <p>Order of Man</p>
-    <p>Lecrae</p>
-    <p>Tedashii</p>
-    <p>KB</p>
-    <p>And a link to my personal YouTube page</p>
+    <h6>Lecrae</h6>
+    <p id="limit">Lecrae is a Christian rapper with a interesting past (look him up; he's pretty awesome!). Check out his YouTube page <a href="https://www.youtube.com/user/LecraeOfficialVEVO">here</a>.</p>
+    <h6>Tedashii</h6>
+    <p id="limit">under construction :)</p>
+    <h6>KB</h6>
+    <p id="limit">under construction :)</p>
+    <h6>And a link to my personal YouTube page</h6>
+    <p id="limit">under construction :)</p>
   </body>
 </html>
