--- a/about.html
+++ b/about.html
@@ -32,9 +32,11 @@
     <p id="limit">Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
     <h3>Promotions</h3>
     <p id="limit">I don't normally promote too much on my own pages because I like to limit the ads/advertisements/etc. people see when they visit. These are some people who have really impacted me in my life, though, and I thought I'd share with all of you.</p>
-    <p>Order of Man</p>
+    <h4>Order of Man</h4>
     <h4>Lecrae</h4>
     <p id="limit">Lecrae is a Christian rapper with a interesting past (look him up; he's pretty awesome!). Check out his YouTube page <a href="https://www.youtube.com/user/LecraeOfficialVEVO">here</a>.</p>
+    <h4>Thi'sl</h4>
+    <p id="limit">Thi'sl is another Christian rapper. He's worked a lot with Lecrae and his music is really cool as well. His YouTube page is <a href="https://www.youtube.com/user/thisl">here</a> (I think it's the official page...).</p>
     <h4>Tedashii</h4>
     <p id="limit">under construction :)</p>
     <h4>KB</h4>
