--- a/about.html
+++ b/about.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" type="text/css" href="./themes.css">
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
+    <!-- Bootstrap links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>About Me</h1>
-    <hr/>
+    <hr style="height:1px; border:none; background-color:#333;"/>
     <image src="./images/brothers.jpg" alt="Snell Brothers" style="float: right;"/>
     <h2>Bio</h2>
     <p id="limit">My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho. Even though I've lived all over the country, I claim Alabama as my home.</p>
