--- a/cheese.html
+++ b/cheese.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body>
+  <body style="padding: 10px;">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thanks for you patience!</p>
     </div>
