--- a/squirrels.html
+++ b/squirrels.html
@@ -19,5 +19,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body style="padding: 10px;">
+    <div class="alert alert-info">
+      <p><strong>Under construction!</strong> Thanks for you patience!</p>
+    </div>
   </body>
 </html>
