--- a/squirrels.html
+++ b/squirrels.html
@@ -22,5 +22,12 @@
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thanks for you patience!</p>
     </div>
+      
+    <header>
+      <ul class="page_links">
+        <li class="page_links"><a href="./about.html">About Me</a></li>
+        <li class="page_links"><a href="./cheese">Cheese</a></li>
+      </ul>
+    </header>
   </body>
 </html>
