--- a/squirrels.html
+++ b/squirrels.html
@@ -9,7 +9,7 @@
 <html>
   <head>
     <title>Squirrels</title>
-    <link rel="icon" href="./images/kali_icon.ico"/>
+    <link rel="icon" href="./images/squirrel.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
@@ -29,5 +29,8 @@
         <li class="page_links"><a href="./cheese">Cheese</a></li>
       </ul>
     </header>
+    
+    <h1>Squirrels</h1>
+    <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
   </body>
 </html>
