--- a/squirrels.html
+++ b/squirrels.html
@@ -30,7 +30,15 @@
       </ul>
     </header>
     
-    <h1>Squirrels</h1>
-    <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
+    <div class="container-fluid">
+      <div class="col-md-6 col-lg-7">
+        <!-- for text about squirrels -->
+        <h1>Squirrels</h1>
+        <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <!-- for pictures -->
+      </div>
+    </div>
   </body>
 </html>
