--- a/squirrels.html
+++ b/squirrels.html
@@ -38,6 +38,7 @@
       </div>
       <div class="col-md-6 col-lg-4">
         <!-- for pictures -->
+        <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel"/>
       </div>
     </div>
   </body>
