--- a/squirrels.html
+++ b/squirrels.html
@@ -38,7 +38,7 @@
       </div>
       <div class="col-md-6 col-lg-4">
         <!-- for pictures -->
-        <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel"/>
+        <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel" width="400" height="300"/>
       </div>
     </div>
   </body>
