--- a/squirrels.html
+++ b/squirrels.html
@@ -18,20 +18,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="padding: 10px;">
+  <body>
     <div class="alert alert-info">
-      <p><strong>Under construction!</strong> Thanks for you patience!</p>
+      <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
-      
-    <header>
+
+    <header style="padding: 10px;">
       <ul class="page_links">
         <li class="page_links"><a href="./about.html">About Me</a></li>
-        <li class="page_links"><a href="./cheese">Cheese</a></li>
+        <li class="page_links"><a href="./cheese.html">Cheese</a></li>
       </ul>
     </header>
-    
+
     <div class="container-fluid">
-      <div class="col-md-6 col-lg-10">
+      <div class="col-md-6 col-lg-9">
         <!-- for text about squirrels -->
         <h1>Squirrels</h1>
         <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
