--- a/squirrels.html
+++ b/squirrels.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body>
+  <body style="background-color: #2E4053;">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
