--- a/cheese.html
+++ b/cheese.html
@@ -19,6 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body style="background-color: #E9E581;">
+    <!-- UNDER CONSTRUCTION ALERT -->
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
@@ -45,6 +46,20 @@
           <li>A giant wheel of Cheddar cheese was given to Queen Victoria (1837-1901) for a wedding gift. It weighed over 1,000 pounds. A normal Cheddar wheel weighs 60-75 pounds.</li>
           <li>In the United States the month of June is National Dairy Month and the last week of June is National Cheese Week.</li>
           <li>A benefit associated with cheese is that it helps protect tooth enamel and has an antibacterial effect. If consumed in moderate quantities it has various health benefits.</li>
+          <li>Pizza Hut is the largest cheese user. They use 30 million pounds of cheese annually--mostly on pizza.</li>
+          <li>In the Roman empire, houses had separate kitchens for producing cheese. These were called "careale".</li>
+          <li>The most stolen food item in the world is cheese. Four percent of all cheese sold ends up being stolen.</li>
+          <li>When cheese is digested, it breaks down into an opiod. Common opiods are herion and morphine.</li>
+          <li>Stilton blue cheese is known to frequently cause odd, vivid dreams.</li>
+          <li>Scientists have successfully created cheese using human bacteria collected from toes and belly buttons.</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ol>
 
         <br/><hr/>
