--- a/cheese.html
+++ b/cheese.html
@@ -26,7 +26,7 @@
 
     <header style="padding: 10px;">
       <ul class="page_links">
-        <li class="page_links"><a href="./about.html">About Me</a></li>
+        <li class="page_links"><a href="./about.html" disabled>About Me</a></li>
         <li class="page_links"><a href="./squirrels.html">Squirrels</a></li>
       </ul>
     </header>
