--- a/cheese.html
+++ b/cheese.html
@@ -26,7 +26,7 @@
 
     <header style="padding: 10px;">
       <ul class="page_links">
-        <li class="page_links"><del><a href="./about.html">About Me</a></del></li>
+          <li class="page_links"><del>About Me</del></li> <!-- <a href="./about.html"></a> -->
         <li class="page_links"><a href="./squirrels.html">Squirrels</a></li>
       </ul>
     </header>
