I'm changing pretty much everything
* changing index.html
* changing about.html
* added inspiration.html
* updated themes.css

* more updates still needed

--- a/about.html
+++ b/about.html
@@ -17,36 +17,40 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body style="padding: 10px;">
-    <h1>About Me</h1>
-    <hr style="height:1px; border:none; background-color:#333;"/>
-    <image src="./images/brothers.jpg" alt="Snell Brothers" style="float: right;"/>
-    <h2>Bio</h2>
-    <p id="limit">My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho. Even though I've lived all over the country, I claim Alabama as my home.</p>
-    <p id="limit">In 2016, my brother and I (in the picture, I'm the handsome one on the left) took a trip to South Dakota to see my grandparents. This picture, however, was of us halfway in Clinton, Missouri.</p>
+    <div class="alert alert-info">
+      <p><strong>Under construction!</strong> Thank you for your patience!</p>
+    </div>
+    <header>
+      <ul class="page_links">
+        <li class="page_links"><a href="./index.html">Home</a></li>
+      </ul>
+    </header>
+    <div class="container-fluid">
+      <h1>About Me</h1>
+      <hr style="height:1px; border:none; background-color:#333;"/>
+      <div class="col-md-6 col-lg-8">
+        <h2>Bio (Somewhat short, I know)</h2>
+        <p>My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho. Even though I've lived all over the country, I claim Alabama as my home. (War Eagle!)</p>
 
-    <h2>Interests</h2>
-    <h3>TV</h3>
-    <p id="limit">I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (I'm almost caught up, so no spoilers!). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
-    <p id="limit">I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch.</p>
-    <h3>Exercising</h3>
-    <p id="limit">I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
-    <h3>Computers</h3>
-    <p id="limit">Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
-    <h4><a href="./cheese.html">Random Cheese Facts!</a></h4>
-    <h3>Promotions</h3>
-    <p id="limit">I don't normally promote too much on my own pages because I like to limit the ads/advertisements/etc. people see when they visit. These are some people who have really impacted me in my life, though, and I thought I'd share with all of you.</p>
-    <h4>Order of Man</h4>
-    <h4>Lecrae</h4>
-    <p id="limit">Lecrae is a Christian rapper with a interesting past (look him up; he's pretty awesome!). Check out his YouTube page <a href="https://www.youtube.com/user/LecraeOfficialVEVO">here</a>.</p>
-    <h4>Thi'sl</h4>
-    <p id="limit">Thi'sl is another Christian rapper. He's worked a lot with Lecrae and his music is really cool as well. His YouTube page is <a href="https://www.youtube.com/user/thisl">here</a> (I think it's the official page...).</p>
-    <h4>Tedashii</h4>
-    <p id="limit">under construction :)</p>
-    <h4>KB</h4>
-    <p id="limit">under construction :)</p>
-    <h4>And a link to my personal YouTube page</h4>
-    <p id="limit">under construction :)</p>
+        <h2>Interests</h2>
+        <h3>TV</h3>
+        <p>I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (I'm almost caught up, so no spoilers!). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
+        <p>I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch. <i>Flatlines</i> was also good. It almost looked like the producers were trying for a scientific horror; so if you're easily scared, stay away. There was a guy in the theater who would scream at every intense part (Seriously, even if it wasn't scary and was just slightly intense, he would jump and yell. It was great.).</p>
+        <h3>Exercising</h3>
+        <p>I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
+        <h3>Computers</h3>
+        <p>Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <!-- links -->
+        <h2>Links</h2>    <br/>
+        <h4><a href="./cheese.html">Random Cheese Facts!</a></h4>
+        <h4><a href="./inspiration.html">If you need some inspiration.</a></h4>
+      </div>
+    </div>
   </body>
 </html>
