--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
-<!--
-Snell, Dallin
-09 NOV 2017
-my personal webpage
+<!-- Snell, Dallin
+  -- 09 NOV 2017
+  -- my personal webpage
 -->
 
 <!DOCTYPE html>
-<html lang = "en">
+<html lang = "en-US">
 <html>
   <head>
     <style>
     </style>
-    <title>root</title>
+    <title>Home</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
     <script src="scripts.js"></script>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
+    <!-- Bootstrap links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color:powderblue;">
-    <h1>root</h1>
-    <p>Page first became active on: 09 NOV 2017.</p>
-    <p>Maybe you made it to this page on accident? It's kind of bland and boring here... Maybe you meant to go to the <a href="./about.html">About Me</a> page?</p>
-    <br/><br/><br/>
-    <h3>List of linkable pages</h3>
-      <ul>
-        <li><a href="./history.html">string history</a></li>
-        <li><a href="./about.html">About Me</a></li>
+  <body style="background-color:powderblue; padding: 10px;">
+    <div class="alert alert-info">
+      <p><strong>Under construction!</strong> Thank you for your patience!</p>
+    </div>
+    <header>
+      <ul class="page_links">
+        <li class="page_links"><a href="./about.html">About Me</a></li>
       </ul>
-    <br/>
-    <button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
+    </header>
+    <h1>Directory</h1>
+    <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go. The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
+    <br/><br/><br/>
+    <h3>Sitemap:</h3>
+      <ul>
+        <li>Blog(ish) side</li>
+        <ul>
+          <li><a href="./about.html">About Me</a></li>
+          <li><a href="./inspiration.html">Inspiration</a></li>
+        </ul>
+        <li>Tutorial side</li>
+        <ul>
+          <li><a href="#"><del>Excel</del></a></li>
+          <li><a href="#"><del>Security</del></a></li>
+        </ul>
+      </ul>
   </body>
 </html>
 
