updated links in the following:
* updated cheese.html
* updated squirrels.html

--- a/squirrels.html
+++ b/squirrels.html
@@ -25,7 +25,7 @@
 
     <header style="padding: 10px;">
       <ul class="page_links">
-        <li class="page_links"><a href="./about.html">About Me</a></li>
+        <li class="page_links"><a href="./index.html">Home</a></li>
         <li class="page_links"><a href="./cheese.html">Cheese</a></li>
       </ul>
     </header>
