--- a/cheese.html
+++ b/cheese.html
@@ -27,6 +27,7 @@
     <header style="padding: 10px;">
       <ul class="page_links">
         <li class="page_links"><a href="./index.html">Home</a></li>
+        <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
         <li class="page_links"><a href="./squirrels.html">Squirrels</a></li>
       </ul>
     </header>
